<resources>
    <string name="app_name">IntrovertGarden</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="homepage_fragment_label">Trang chủ</string>
    <string name="fieldlist_fragment_label">Danh sách cánh đồng</string>
    <string name="measureddata_fragment_label">Tình trạng</string>
    <string name="irrigation_fragment_label">Cài đặt tưới</string>
    <string name="customized_fragment_label">Điều chỉnh</string>
    <string name="phaseList_fragment_label_en">Phases</string>

    <string name="Logo">Logo</string>
    <string name="add">New</string>
    <string name="getting_started">Start caring your garden</string>
    <string name="homepage_sign_in">Already have an account?</string>
    <string name="sign_in">
        <u>Sign In.</u>
    </string>
    <string name="sign_up">
        <u>Sign Up.</u>
    </string>
    <string name="sign_up_mark_question">Don\'t have an account?</string>
    <string name="project_name">Introverts\' Garden</string>
    <string name="introduction">Start caring your garden with our smart solutions.</string>
    <string name="start_time">Thời gian bắt đầu tưới</string>
    <string name="end_time">Thời gian kết thúc tưới</string>
    <string name="end_time_en">Your irrigation ends at </string>
    <string name="amount_water">Lượng nước tưới</string>
    <string name="water_unit">l/m²</string>

    <string name="waterButton">Tưới cây!</string>
    <string name="manualButton">Manual</string>
    <string name="autoButton">Auto</string>

    <string name="area">Diện tích:</string>
    <string name="area_unit">m²</string>
    <string name="drip_unit">ml/s</string>
    <string name="rain_unit">%</string>
    <string name="distance_unit">m</string>
    <string name="percent_unit">%</string>
    <string name="number_holes">Tổng số lỗ tưới:</string>
    <string name="distance_holes">Khoảng cách giữa hai lỗ:</string>
    <string name="distance_row">Khoảng cách giữa hai hàng:</string>
    <string name="drip_rate">Tốc độ nhỏ giọt: </string>
    <string name="fer_level">Cấp độ bón phân: </string>
    <string name="rain">Tỉ lệ mưa: </string>
    <string name="number_holes_unit">lỗ</string>
    <string name="humidity">Humidity</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="adjust">Điều chỉnh</string>
    <string name="status">Tình trạng</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Tên</string>
    <string name="insert_new_name">Nhập tên cánh đồng:</string>
    <string name="done">Done</string>
    <string name="cant_blank">Không được để trống</string>
    <string name="update">Cập nhật</string>
    <string name="date_insert">YYYY-MM-YY</string>
    <string name="start_date_insert">Nhập ngày bắt đầu</string>
    <string name="end_date_insert">Nhập ngày kết thúc</string>
    <string name="humid_insert">Nhập độ ẩm</string>
    <string name="sign_in_password_confirmation">Password Confirmation</string>
    <string name="sign_in_mark_question">Already have an account?</string>
    <string name="sign_in_mark_account">Email Address</string>
    <string name="sign_in_acc_eg">extroverts@gmail.com</string>
    <string name="fill_email">Enter your email address...</string>
    <string name="enter_email">Your email address:</string>
    <string name="verify_email">Check your email for verification link!</string>
    <string name="verify_check">Please verify your email!</string>
    <string name="receive_verification_question">Didn\'t receive any link?</string>
    <string name="resend_verification">
        <u>Resend.</u>
    </string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_password_eg">Your Password</string>
    <string name="forgot_password">
        <u>Forgot password?</u>
    </string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="field_list_title">Your Gardens</string>
    <string name="new_field">Add a garden</string>
    <string name="new_field_name">New garden name</string>
    <string name="hint_new_field_name">Name your garden</string>
    <string name="view">View</string>
    <string name="edit">Adjust\n</string>
    <string name="area_en">Area</string>
    <string name="number_holes_en">Number of holes</string>
    <string name="no_of_holes_en">No. of holes</string>
    <string name="distance_holes_en">Distance between holes</string>
    <string name="distance_row_en">Distance between rows</string>
    <string name="drip_rate_en">Drip rate</string>
    <string name="rain_en">Rain scale</string>
    <string name="update_en">Update</string>
    <string name="stage_change_en">Adjust phase</string>
    <string name="radiation">Radiation</string>
    <string name="rad_s">rad/s</string>
    <string name="calcius">°C</string>
    <string name="temperature">Temperature</string>
    <string name="kPa">kPa</string>
    <string name="soil_moisture">Soil\nMoisture</string>
    <string name="percent">%</string>
    <string name="control">Water your garden</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="hello">Hi there!</string>
    <string name="gardens">Gardens</string>
    <string name="more">More</string>
    <string name="garden">Garden</string>
    <string name="tips">Tips</string>
    <string name="tip1_title">Apartment Balcony Garden | designing with plants</string>
    <string name="tip1_author">benjiplant</string>
    <string name="tip2_title">Turning my balcony into a cosy paradise ☁️ | DIY Balcony Makeover</string>
    <string name="tip2_author">cloudyhills</string>
    <string name="tip3_title">Growing Rosemary is SO Easy</string>
    <string name="tip3_author">Epic Gardening</string>
    <string name="adjust_en">Adjust</string>
    <string name="tips_for_garden">Tips for \nyour gardens</string>
    <string name="tip5_title">How to Grow Rosemary at Home | All About Classic Aromatic Herb Rosemary</string>
    <string name="tip5_author">Garden Vibes</string>
    <string name="tip4_title">Bok Choy - Best Growing and Harvesting Tips | Maximum Production</string>
    <string name="tip4_author">GreenTGarden</string>
    <string name="measureddata_fragment_label_en">Measured data</string>
    <string name="irrigation_start_time_title">Start time</string>
    <string name="irrigation_amount_time_title">Duration</string>
    <string name="start_time_en">Start time</string>
    <string name="new_phase">Add new phase</string>
    <string name="add_phase">Add phase</string>

    <string name="English">English</string>
    <string name="Vietnamese">Tiếng Việt</string>

    <string name="sign_in_title">Sign In</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="change_pwd">Change Password</string>
    <string name="change_username_title">Change Your Username</string>
    <string name="change_username">Your new username</string>
    <string name="username">Username</string>
    <string name="language">Language</string>
    <string name="logout">Log Out</string>
    <string name="logout_confirm">Are you sure you want\nto log out?</string>
    <string name="confirm">Confirm</string>
    <string name="delete_confirm">Are you sure you want to\ndelete this garden?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="email_verification">Email Verification</string>
    <string name="verify_email_title">Verify Your Email</string>
    <string name="enter_old_pwd">Current password</string>
    <string name="enter_new_pwd">New password</string>
    <string name="confirm_new_pwd">New password confirmation</string>
    <string name="old_pwd">Current Password</string>
    <string name="new_pwd">New Password</string>
    <string name="watch_video">Watch on Youtube</string>
</resources>