<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragments.SignInFragment"
                android:background="@color/background"
                tools:ignore="ExtraText">
    <LinearLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/top"
            android:orientation="vertical"/>

    <TextView
            android:id="@+id/textView"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bld"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sign_in_mark_account"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_below="@id/topPanel"
            />

    <EditText
            android:id="@+id/edtUsername"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/textView"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:layout_height="56dp"
            android:background="@drawable/edittext"
            android:textColor="#000000"
            android:hint="@string/sign_in_acc_eg"
            android:fontFamily="@font/montserrat"
            android:singleLine="true"
            android:padding="10dp"
            android:drawableStart="@drawable/mailbox"
            />
    <TextView
            android:id="@+id/passwordtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtUsername"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:text="@string/sign_in_password"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat_bld"
            />
    <EditText
            android:id="@+id/edtPassword"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/passwordtxt"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:layout_height="56dp"
            android:background="@drawable/edittext"
            android:textColor="#000000"
            android:hint="@string/sign_in_password"
            android:fontFamily="@font/montserrat"
            android:singleLine="true"
            android:padding="10dp"
            android:drawableStart="@drawable/key"
            />
    <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_below="@id/edtPassword"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_sign_in_green"
            app:backgroundTint="@null"
            android:layout_centerHorizontal="true"
            />
    <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSignIn"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:text="@string/forgot_password"
            android:textColor="#818BA0"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat"
            />
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:layout_below="@id/forgotPassword"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            />
    <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotPassword"
            android:layout_marginTop="40dp"
            android:textSize="14sp"
            android:text="@string/or"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/bold_montserrat"
            android:textColor="#818BA0"
            />
    <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="327dp"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/or"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_white"
            android:drawableEnd="@drawable/google"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/background_homepage"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bld"
            app:backgroundTint="@null"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_below="@id/buttonGoogle"
            android:layout_marginTop="20dp">
        <TextView
                android:id="@+id/mark_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/sign_up_mark_question"
                android:textColor="#818BA0"
                android:fontFamily="@font/montserrat"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/bold_montserrat"
                android:gravity="center_vertical"
                android:text="@string/sign_up"
                android:textColor="#FA4D5E"
                android:textSize="12sp"
                android:focusable="true"/>
    </LinearLayout>
</RelativeLayout>