<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:visibility="visible"
    tools:context=".fragments.SignUpFragment"
    tools:ignore="ExtraText">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/topsignup"
        android:orientation="vertical"
        />

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/textView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/mailbox"
        android:hint="@string/fill_email"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/passwordtext"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/key"
        android:hint="@string/sign_in_password"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/visability"
        android:paddingEnd="18dp"
        android:singleLine="true"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edUsername"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/sign_in_password"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edPasswordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/passwordconfirmtxt"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/key"
        android:hint="@string/sign_in_password"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/visability"
        android:paddingEnd="18dp"
        android:singleLine="true"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/passwordconfirmtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edPassword"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/sign_in_password_confirmation"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanel"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/sign_in_mark_account"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="338dp"
        android:layout_height="59dp"
        android:layout_below="@id/topPanel"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_green"
        android:drawableRight="@drawable/white_arrow"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textSize="18dp"
        app:backgroundTint="@null" />

    <TextView
        android:id="@+id/HaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSignUp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_mark_question"
        android:textColor="@color/grey"
        android:textSize="16dp"  />

    <TextView
        android:id="@+id/switchToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSignUp"
        android:layout_marginStart="265dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        android:textSize="16dp"
        android:textColor="@color/red"
        android:textStyle="bold" />

</RelativeLayout>